[package]
name = "disk-types"
version = "0.1.1"
authors = ["Jeremy Soller <jackpot51@gmail.com>", "Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Traits and types for block devices, partitions, file systems, etc."
repository = "https://github.com/pop-os/distinst"
readme = "README.md"
license = "MIT"
keywords =  ["disk", "partition"]
categories = ["filesystem", "os"]

[dependencies]
sys-mount = "1.1.0"
tempdir = "0.3.7"
os-detect = "0.2.1"
sysfs-class = "0.1.1"
failure = "0.1.3"
failure_derive = "0.1.3"
libparted = "0.1.3"
bitflags = "1.0.4"
